[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grindstone_json_editor"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "volv", email = "115556838+saturn-volv@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "glob", "json", "os"
]

[project.urls]
Documentation = "https://github.com/volv/grindstone#readme"
Issues = "https://github.com/volv/grindstone/issues"
Source = "https://github.com/volv/grindstone"

[tool.hatch.version]
path = "src/grindstone/__about__.py"
[tool.hatch.build.targets.wheel]
packages = ["src/grindstone"]

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/grindstone tests}"

[tool.coverage.run]
source_pkgs = ["grindstone", "tests"]
branch = true
parallel = true
omit = [
  "src/grindstone/__about__.py",
]

[tool.coverage.paths]
grindstone = ["src/grindstone", "*/grindstone/src/grindstone"]
tests = ["tests", "*/grindstone/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
